# github-actions-test

./: CMakeLists.txt  vcpkg.json
.github/actions/install-dependencies/: action.yaml
.github/actions/linux/base/: action.yaml
.github/actions/linux/gcc-11/: action.yaml
.github/workflows/: ci.yml
cmake/presets/: aarch64-darwin-clang.json  aarch64-darwin-gcc.json
cmake/presets/os/: darwin.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_ght_executable.cmake  add_ght_module.cmake  ght-config.cmake  ght-install-targets.cmake  set_ght_target_properties.cmake
src/core/: CMakeLists.txt
src/core/include/ght/core/: version.hpp
src/core/src/: version.cpp
tests/: CMakeLists.txt
tests/cmake/: add_ght_test.cmake
tests/core/: CMakeLists.txt  version_test.cpp
